--- a/graphic_design.html
+++ b/graphic_design.html
@@ -28,10 +28,30 @@
         </nav>
     </header>
 
-
-
+    <div class="container">
+        <div class="containerwrap">
+            <div id="nav_bar" class="nav-bar">
+                <p id="index_button" class="index-button">Index</p>
+            </div>
+            <div class="index">
+                <h3>
+                    <p id="index_text"style="text-decoration:none;">
+                        <a href="#1" class="scroll" style="text-decoration:none;">Splendori e miserie del gioco del calcio</a> <br>
+                        <a href="#2" class="scroll" style="text-decoration:none;">Splendori e miserie del gioco del calcio</a>
+                    </p>
+                </h3>
+            </div>
+        </div>
+    </div>
+ 
+ 
+ 
+ 
+ 
+ 
     <section id="graphic-design" class="section">
-        <h2>Graphic Design</h2>
+      <!-- <h2>Graphic Design</h2>--> 
+        <div class="project_container" id="1">
         <div class="project-scroll">
             <!-- Project 1 -->
             <div class="project">
@@ -43,15 +63,18 @@
                 </div>
             </div>
         </div>
-<div class="project-text">
+ <div class="project-text">
    <div class="col-1-details">
     <p > Splendori e miserie del gioco del calcio <br> Editorial Design <br> 2022  <br> </p>
-   </div> 
+   </div>
    <div class="project-description">
     <p class="col-2-description">“Splendori e Miserie del gioco del calcio” di Eduardo Galeano è un libro unico nel suo genere, una narrazione frammentata che si estende nel tempo. Pubblicata per la prima volta nel 1997, quest’opera offre una prospettiva critica sul mondo del calcio, analizzando le sue contraddizioni, i suoi aspetti positivi e negativi, e le implicazioni socio-culturali che ne derivano. Il libro di Galeano, “Splendori e miserie del gioco del calcio”, si presenta come un mosaico affascinante, composto da una varietà di storie, testimonianze e aneddoti che si intrecciano per offrire una visione poliedrica e completa del calcio. Ogni frammento racconta una storia unica, permettendo al lettore di immergersi in una realtà ricca di sfumature e contraddizioni.</p>
-     <p class="col-3-description"> Uno degli aspetti visivi che caratterizza l’interpretazione grafica proposta è l’utilizzo di paragrafi disallineati. Questa scelta è motivata dalla volontà di rappresentare la natura frammentata della narrazione nel libro “Splendori e miserie del gioco del calcio” di Eduardo Galeano. La disposizione disallineata dei paragrafi genera una sensazione di discontinuità e scoperta nel processo di lettura. Ogni capitolo può essere letto in un ordine casuale senza compromettere la comprensione complessivadeltesto.Questa scelta intenzionale mira a promuovere un’esperienza di lettura esplorativa, in cui il lettore può scegliere liberamente i percorsi narrativi da seguire.</p>
    </div>
     </div>
+ </div>
+ 
+ 
+ <div class="project_container" id="2">
     <div class="project-scroll">
         <!-- Project 1 -->
         <div class="project">
@@ -63,21 +86,24 @@
             </div>
         </div>
     </div>
-<div class="project-text">
-<div class="project-details">
-<p > Splendori e miserie del gioco del calcio <br> Editorial Design <br> 2022  <br> </p>
-</div> 
-<div class="project-description">
-<p class="column-wrapper">“Splendori e Miserie del gioco del calcio” di Eduardo Galeano è un libro unico nel suo genere, una narrazione frammentata che si estende nel tempo. Pubblicata per la prima volta nel 1997, quest’opera offre una prospettiva critica sul mondo del calcio, analizzando le sue contraddizioni, i suoi aspetti positivi e negativi, e le implicazioni socio-culturali che ne derivano. Il libro di Galeano, “Splendori e miserie del gioco del calcio”, si presenta come un mosaico affascinante, composto da una varietà di storie, testimonianze e aneddoti che si intrecciano per offrire una visione poliedrica e completa del calcio. Ogni frammento racconta una storia unica, permettendo al lettore di immergersi in una realtà ricca di sfumature e contraddizioni.
-    Uno degli aspetti visivi che caratterizza l’interpretazione grafica proposta è l’utilizzo di paragrafi disallineati. Questa scelta è motivata dalla volontà di rappresentare la natura frammentata della narrazione nel libro “Splendori e miserie del gioco del calcio” di Eduardo Galeano. La disposizione disallineata dei paragrafi genera una sensazione di discontinuità e scoperta nel processo di lettura. Ogni capitolo può essere letto in un ordine casuale senza compromettere la comprensione complessivadeltesto.Questa scelta intenzionale mira a promuovere un’esperienza di lettura esplorativa, in cui il lettore può scegliere liberamente i percorsi narrativi da seguire.</p>
-</div>
-</div>
-
-
+ <div class="project-text">
+ <div class="col-1-details">
+ <p > Splendori e miserie del gioco del calcio <br> Editorial Design <br> 2022  <br> </p>
+ </div>
+ <div class="project-description">
+ <p class="col-2-description">“Splendori e Miserie del gioco del calcio” di Eduardo Galeano è un libro unico nel suo genere, una narrazione frammentata che si estende nel tempo. Pubblicata per la prima volta nel 1997, quest’opera offre una prospettiva critica sul mondo del calcio, analizzando le sue contraddizioni, i suoi aspetti positivi e negativi, e le implicazioni socio-culturali che ne derivano. Il libro di Galeano, “Splendori e miserie del gioco del calcio”, si presenta come un mosaico affascinante, composto da una varietà di storie, testimonianze e aneddoti che si intrecciano per offrire una visione poliedrica e completa del calcio. Ogni frammento racconta una storia unica, permettendo al lettore di immergersi in una realtà ricca di sfumature e contraddizioni.</p>
+ <p class="col-3-description"> Uno degli aspetti visivi che caratterizza l’interpretazione grafica proposta è l’utilizzo di paragrafi disallineati. Questa scelta è motivata dalla volontà di rappresentare la natura frammentata della narrazione nel libro “Splendori e miserie del gioco del calcio” di Eduardo Galeano. La disposizione disallineata dei paragrafi genera una sensazione di discontinuità e scoperta nel processo di lettura. Ogni capitolo può essere letto in un ordine casuale senza compromettere la comprensione complessivadeltesto.Questa scelta intenzionale mira a promuovere un’esperienza di lettura esplorativa, in cui il lettore può scegliere liberamente i percorsi narrativi da seguire.</p>
+ </div>
+ </div>
+ </div>
+ 
+ 
     </section>
-   
+  
     <script src="script.js"></script>
-</body>
-<div class="custom-cursor"></div>
-
-</html>
+ </body>
+ <div class="custom-cursor"></div>
+ 
+ 
+ </html>
+  
